[package]
name = "gloo-fetch"
description = "Convenience crate for working with JavaScript fetch method"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/fetch"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "web-programming", "wasm"]


[dependencies]
http = "0.2.0"
js-sys = "0.3.32"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"

[dependencies.web-sys]
version = "0.3.32"
features = [
    "Response",
    "Window",
    "RequestInit",
    "AbortSignal",
    "ObserverCallback",
    "ReferrerPolicy",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Headers"
]